--- a/00_Python_and_Numpy_Introduction.ipynb
+++ b/00_Python_and_Numpy_Introduction.ipynb
@@ -31,7 +31,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import cv2"
    ]
   },
   {
@@ -1029,9 +1031,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import cv2\n",
-    "\n",
     "img = cv2.imread('Pictures/Lenna.png')\n",
     "img = cv2.cvtColor(img, cv2.COLOR_RGB2BGR)  # Convert to right color space\n",
     "print(img.shape)                            # Shape of the image\n",
@@ -1076,7 +1075,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
