--- a/04_Regression.ipynb
+++ b/04_Regression.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -49,16 +49,7 @@
     "id": "VZJzQXtUCH7L",
     "outputId": "83dcaace-d500-4645-cdff-65dc5e2665fc"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.3.1\n",
-      "1 Physical GPUs, 1 Logical GPUs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TensorFlow and tf.keras\n",
     "import tensorflow as tf\n",
@@ -438,14 +429,14 @@
     "    return model\n",
     "\n",
     "# If you run into an error compile is missing\n",
-    "model.compile(loss=\"mse\",optimizer=\"adam\",metrics=[\"accuracy\"])\n",
+    "model.compile(loss=\"mse\",optimizer=\"adam\")\n",
     "```\n",
     "</details>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -466,9 +457,8 @@
    "source": [
     "def build_model():\n",
     "    keras.backend.clear_session()\n",
-    "    \n",
     "    ############ YOUR CODE HERE ############\n",
-    "    model = keras.Sequential()\n",
+    "   \n",
     "    \n",
     "    # Output Layer with 1 Neuron as Output\n",
     "    model.add(Dense(y_train.shape[1]))\n",
@@ -502,11 +492,12 @@
    "source": [
     "# Build the model and show the layers\n",
     "model = build_model()\n",
-    "#opti = tf.keras.optimizers.Adam()\n",
+    "opti = tf.keras.optimizers.Adam()\n",
     "#opti = tf.keras.optimizers.SGD()\n",
     "#opti = tf.keras.optimizers.Adamax()\n",
     "\n",
-    "model.compile(optimizer=opti,loss=\"mse\")\n",
+    "############ YOUR CODE HERE ############\n",
+    "\n",
     "model.summary()"
    ]
   },
@@ -647,8 +638,7 @@
     "plt.xlabel('Epoch')\n",
     "plt.ylabel('Mean Square Error')\n",
     "plt.plot(hist['epoch'], hist['loss'], label='Train Error')\n",
-    "############ YOUR CODE HERE ############\n",
-    "# If you want to plot more metrics e.g. \"accuracy\"\n",
+    "\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -799,7 +789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
