--- a/01_Neural_Network_Basics.ipynb
+++ b/01_Neural_Network_Basics.ipynb
@@ -20,6 +20,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install scikit-image"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -38,6 +47,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
+    "import cv2\n",
     "import matplotlib.pyplot as plt\n",
     "import tensorflow as tf\n",
     "import tensorflow.keras as tfk\n",
@@ -524,7 +534,7 @@
     "\n",
     "Dropout is used to prevent exactly that by dropping out different neurons in each layer after every training step. This forces the network to take different paths even if the input data would be the same resulting in a more robust training and reducing the risk of overfitting! \n",
     "\n",
-    "<img src=\"pictures/dropout.png\" width=\"500\" align=\"middle\" />  "
+    "<img src=\"Pictures/dropout.png\" width=\"500\" align=\"middle\" />  "
    ]
   },
   {
@@ -1008,7 +1018,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
