--- a/02_Tensorflow_Playground.ipynb
+++ b/02_Tensorflow_Playground.ipynb
@@ -341,8 +341,8 @@
     "img2 = open(loss_acc_gif, 'rb').read()\n",
     "## Create image widgets. You can use layout of ipywidgets only with widgets.\n",
     "## Set image variable, image format and dimension.\n",
-    "wi1 = widgets.Image(value=img1, format='png')#, width=500, height=500)\n",
-    "wi2 = widgets.Image(value=img2, format='png')#, width=500, height=500)\n",
+    "wi1 = widgets.Image(value=img1, format='png', width=500, height=500)\n",
+    "wi2 = widgets.Image(value=img2, format='png', width=500, height=500)\n",
     "## Side by side thanks to HBox widgets\n",
     "sidebyside = widgets.HBox([wi1, wi2])\n",
     "## Finally, show.\n",
