--- a/02_Tensorflow_Playground.ipynb
+++ b/02_Tensorflow_Playground.ipynb
@@ -206,6 +206,7 @@
     "                  2. What happens to the output Gif if you use different activation functions\n",
     "                  3. If necessary modify the Hyperparameters (N_SAMPLES, TEST_SIZE, N_EPOCHS) in Settings\n",
     "                     3.1 Can you reduce the number of Training Epochs? If yes, why?"
+    "                     3.2 Modify the `patience` parameter in EarlyStopping callback and check the accuracy
    ]
   },
   {
@@ -243,6 +244,7 @@
    "source": [
     "# Adding a callback function that plots images at every epoch\n",
     "testmodelcb = tf.keras.callbacks.LambdaCallback(on_epoch_end=save_model_prediction_graph)\n",
+    "# patience: Number of epochs with no improvement after which training will be stopped.\n",
     "earlystoppingcb = tf.keras.callbacks.EarlyStopping(monitor=\"loss\",patience=3, verbose=1, mode=\"min\",min_delta=1e-2)"
    ]
   },
