--- a/02_Tensorflow_Playground.ipynb
+++ b/02_Tensorflow_Playground.ipynb
@@ -205,8 +205,8 @@
     "                     2.1 Check how many epochs you need to\n",
     "                  2. What happens to the output Gif if you use different activation functions\n",
     "                  3. If necessary modify the Hyperparameters (N_SAMPLES, TEST_SIZE, N_EPOCHS) in Settings\n",
-    "                     3.1 Can you reduce the number of Training Epochs? If yes, why?"
-    "                     3.2 Modify the `patience` parameter in EarlyStopping callback and check the accuracy"
+    "                     3.1 Can you reduce the number of Training Epochs? If yes, why?\n",
+    "                     3.2 Modify the parameter in EarlyStopping callback and check the accuracy\n",
    ]
   },
   {
